style.css
@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');

.urbanist {
    font-family: "Urbanist", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

header {
    background: #3d5478;
    color: white;
    padding: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.header-title {
    display: flex;
    flex-direction: column;
}

header h1 {
    margin: 0;
}

header p {
    margin: 0;
}

h2 {
    padding-left: 1.5rem;
}

nav {
    display: flex;
    gap: 2rem;
    margin-left: auto;
    flex-wrap: wrap;
}

nav a {
    color: white;
    text-decoration: none;
    font-weight: 500;
}

nav a:hover {
    color: #afc8f0;
}

main {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    padding: 3rem 0;
}

section {
    max-width: 100%;
    width: 60rem;
    margin: 0 auto;
    padding: 2rem;
    background-color: white;
    border-radius: 1rem;
    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.08);
}

.intro {
    display: flex;
    gap: 2rem;
    padding: 1.5rem;
    align-items: center;
}

.intro img {
    width: 10rem;
    border-radius: 5%;
}

.skills ul{
    padding: 0;
}

body {
    font-family: "Urbanist", sans-serif;
}

